# ros_waypoint_logger

./: README.md  pyproject.toml
graphic_editor/: __init__.py  application.py  waypoints_loader.py
traj_examples/: new_loc.csv  new_loc_modified.csv
trajectory_logger/: package.xml  setup.py
trajectory_logger/config/: params.yaml
trajectory_logger/launch/: trajectory_logger.launch.py  trajectory_logger_launch.py
trajectory_logger/trajectory_logger/: trajectory_logger_node.py
