<?xml version="1.0"?>
<package format="3">
  <name>trajectory_logger</name>
  <version>0.0.1</version>
  <description>Logs vehicle trajectory data</description>
  <maintainer email="ahmadamine998@gmail.com">Ahmad Amine</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pandas</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>numpy</exec_depend>
</package>
