<?xml version="1.0"?>
<package format="3">
  <name>trajectory_logger</name>
  <version>0.0.1</version>
  <description>Logs vehicle trajectory data</description>
  <maintainer email="ahmadamine998@gmail.com">Ahmad Amine</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
</package>
